--- a/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -1,6 +1,13 @@
+<!DOCTYPE html>
+<html   xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+  <head>
+  </head>
 
+  <body>
   <!-- Footer -->
-        <footer>
+        <footer th:fragment="footer">
             <div class="row">
                 <div class="col-lg-12">
                     <p>Copyright &copy; HomLim</p>
@@ -10,13 +17,11 @@
             <!-- /.row -->
         </footer>
 
-    </div>
-    <!-- /.container -->
+    
+	<div th:fragment="scripts">
+	<script type="text/javascript" th:src="@{/resources/js/jquery.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/bootstrap.min.js}"></script>
+	</div>
+</body>
 
-    <!-- jQuery -->
-    <c:url value="/resources/js/jquery.js" var="jQueryUrl" />
-    <script src="${jQueryUrl}"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-     <c:url value="/resources/js/bootstrap.min.js" var="jsBootUrl" />
-    <script src="${jsBootUrl}"></script>
+</html>
