--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -1,26 +1,28 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Homolka Lihm ">
+<!DOCTYPE html>
+<html   xmlns="http://www.w3.org/1999/xhtml"
+        xmlns:th="http://www.thymeleaf.org"
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+  <head th:fragment="header">
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="" />
+    <meta name="author" content="Homolka Lihm " />
 
-    <title>${param.title}</title>
+    <title>Hotely</title>
 
-	<!-- Bootstrap Core CSS -->
-    <link href="/resources/css/bootstrap.min.css" rel="stylesheet" />
-
-
-    <!-- Custom CSS -->
-    <link href="/resources/css/round-about.css" rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
+    
+    	<link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
     
   </head>
 
   <body>
-
-    <!-- Static navbar -->
+  
+      <!-- Static navbar -->
        <!-- Navigation -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav th:fragment="navbar" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -50,5 +52,6 @@
         </div>
         <!-- /.container -->
     </nav>
+  </body>
 
-    <div class="container">
+</html>
