--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -3,7 +3,7 @@
         xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <head th:fragment="header">
-    <meta charset="utf-8"></meta>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="Homolka Lihm " />
@@ -15,8 +15,10 @@
     
     	<link rel="stylesheet" type="text/css" media="all" 
           href="../../reources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
+    <link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />      
     
-  </head>
+  </head>		
 
   <body>
   
