--- a/src/main/webapp/WEB-INF/views/layout/footer.html
+++ b/src/main/webapp/WEB-INF/views/layout/footer.html
@@ -21,6 +21,7 @@
 	<div th:fragment="scripts">
 	<script type="text/javascript" th:src="@{/resources/js/jquery.js}"></script>
 	<script type="text/javascript" th:src="@{/resources/js/bootstrap.min.js}"></script>
+	<script type="text/javascript" th:src="@{/resources/js/star-rating.min.js}"></script>
 	</div>
 </body>
 
