Revert "Charset repair"
This reverts commit 1f4e2dd431b48480c8010fde15c56516c8bc8cf6.

--- a/src/main/webapp/WEB-INF/views/home.html
+++ b/src/main/webapp/WEB-INF/views/home.html
@@ -38,7 +38,7 @@
                 <p>Hodnoceni je:  <span th:text="${hotel.rating}"></span></p>
 
                 <a href="#" data-th-href="@{/remove/(id=${hotel.hotelId})}" onclick="return confirm('Really remove from basket?');">Remove</a>
-                <a href="#" data-th-href="@{/detail/(id=${hotel.hotelId})}">Detail</a> 
+                <a href="#" data-th-href="@{/review/(hotelId=${hotel.hotelId})}">Pridat recenzi</a> 
                 <a href="#" data-th-href="@{/hotel/(id=${hotel.hotelId})}">Edit</a>                           
             </div>
 
