--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -16,7 +16,10 @@
     	<link rel="stylesheet" type="text/css" media="all" 
           href="../../reources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
     <link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />           
+          href="../../reources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />
+          
+          <link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />                  
     
   </head>		
 
