--- a/src/main/webapp/WEB-INF/views/hotelAddEdit.html
+++ b/src/main/webapp/WEB-INF/views/hotelAddEdit.html
@@ -5,10 +5,12 @@
 </head>
 
 <body>
-
+	
 	<nav th:replace="/layout/header :: navbar"></nav>
 
 	<div class="container">
+	<h2 th:if="${hotel.name}">Editace hotelu: <span th:text="${hotel.name}"></span>Přidání nového hotelu</h2>
+	<h2 th:unless="${hotel.name}">Přidání nového hotelu</h2>
 		<form action="#" th:action="@{/updateHotel/}"
 			th:object="${hotelUpload}" method="post" enctype="multipart/form-data">
 			<div class="form-group">
