--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -1,63 +1,44 @@
 <!DOCTYPE html>
-<html 	xmlns="http://www.w3.org/1999/xhtml" 
-		xmlns:th="http://www.thymeleaf.org" >
-<head>
-<title>Login Page</title>
-<style>
-.error {
-	padding: 15px;
-	margin-bottom: 20px;
-	border: 1px solid transparent;
-	border-radius: 4px;
-	color: #a94442;
-	background-color: #f2dede;
-	border-color: #ebccd1;
-}
-
-.msg {
-	padding: 15px;
-	margin-bottom: 20px;
-	border: 1px solid transparent;
-	border-radius: 4px;
-	color: #31708f;
-	background-color: #d9edf7;
-	border-color: #bce8f1;
-}
-
-#login-box {
-	width: 300px;
-	padding: 20px;
-	margin: 100px auto;
-	background: #fff;
-	-webkit-border-radius: 2px;
-	-moz-border-radius: 2px;
-	border: 1px solid #000;
-}
-</style>
+<html xmlns="http://www.w3.org/1999/xhtml"
+	xmlns:th="http://www.thymeleaf.org">
+<head th:replace="/layout/header :: header">
 </head>
-<body onload='document.loginForm.username.focus();'>
 
-	<h1>Spring Security Login Form (Database + Hibernate Authentication)</h1>
+<body>
 
-	<div id="login-box">
+	<nav th:replace="/layout/header :: navbar"></nav>
 
-		<h3>Login with Username and Password</h3>
+
+	<div class="container">
 		
-		<p th:if="${error}">Wrong user or password</p>
-		<p th:if="${msg}">Wrong user or password</p>
-		
-		<form th:action="@{/login}" method="post">
-      			<label for="username">Username</label>:
-      			<input type="text" id="username" name="username" /> <br />
-     			 <label for="password">Password</label>:
-     			 <input type="password" id="password" name="password" /> <br />
-     			 <input type="submit" value="Log in" />
-			
+		<form class="form-signin" th:action="@{/login}" method="post">
+			<p th:if="${error}">Wrong user or password</p>
+			<p th:if="${msg}">Logout succesfull matafaka</p>
+			<h2 class="form-signin-heading">Přihlašte se prosím</h2>
+			<label for="username" class="sr-only">Username</label> <input
+				type="text" id="username" class="form-control"
+				placeholder="Username" name="username" required="required" autofocus="autofocus" />
+			<label for="password" class="sr-only">Password</label> <input
+				type="password" id="password" class="form-control"
+				placeholder="Password" required="required" name="password"/>
+			<div class="checkbox">
+				<label> <input type="checkbox" value="remember-me" />
+					Zapamatovat si mě
+				</label>
+			</div>
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Přihlásit</button>
 			<input type="hidden" name="${_csrf.parameterName}"
 				value="${_csrf.token}" />
-
 		</form>
+
+		<!-- Footer -->
+		<footer th:replace="/layout/footer :: footer"> </footer>
+
 	</div>
+	<!-- /.container -->
+
+	<div th:replace="/layout/footer :: scripts"></div>
 
 </body>
+
 </html>
