--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -11,12 +11,16 @@
     <title>Hotely</title>
 
 	<link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
+          href="../../resources/css/bootstrap.min.css" th:href="@{/resources/css/bootstrap.min.css}" />
     
     	<link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
+          href="../../resources/css/round-about.css" th:href="@{/resources/css/round-about.css}" />
     <link rel="stylesheet" type="text/css" media="all" 
-          href="../../reources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />           
+          href="../../resources/css/star-rating.min.css" th:href="@{/resources/css/star-rating.min.css}" />  
+    <link rel="stylesheet" type="text/css" media="all" 
+          href="../../resources/css/basic.min.css" th:href="@{/resources/css/basic.min.css}" />  
+    <link rel="stylesheet" type="text/css" media="all" 
+          href="../../resources/css/dropzone.min.css" th:href="@{/resources/css/dropzone.min.css}" />           
     
   </head>		
 
