--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -12,72 +12,79 @@
     <div class="container">
 	<h2>Registrace</h2>
     <form action="#" th:action="@{/updateUser/}"
-			th:object="${userUpload}" method="post" enctype="multipart/form-data">
+			th:object="${user}" method="post" enctype="multipart/form-data">
 			<div class="form-group">
-				<input type="hidden" th:field="*{user.userId}" />
+				<input type="hidden" th:field="${user.userId}" />
+				
 				<label for="user.login">Username:</label>
-				<input class="form-control" type="text" th:field="*{user.login}" />
+				<input class="form-control" type="text" th:field="${user.login}" />
 			</div>
 			<div class="form-group">
 				<label for="user.password">Password: </label> 
-				<input class="form-control" type="text" th:field="*{user.password}" />
+				<input class="form-control" type="password" th:field="${user.password}" />
 			</div>
 			<div class="form-group">
 				<label for="user.passwordAgain">Password Again: </label> 
-				<input class="form-control" type="text" id="user.passwordAgain"/>
+				<input class="form-control" type="password" id="user.passwordAgain"/>
 			</div>
 			<div class="form-group">
+				<label for="user.email">Email: </label> 
+				<input class="form-control" type="text" th:field="${user.email}"/>
+			</div>			
+			
+			<div class="form-group">
 				<label for="user.name">Jmeno: </label> 
-				<input class="form-control" type="text" th:field="*{user.name}" />
+				<input class="form-control" type="text" th:field="${user.name}" />
 			</div>
 			<div class="form-group">
 				<label for="user.surname">Prijmeni: </label> 
-				<input class="form-control" type="text" th:field="*{user.surname}" />
+				<input class="form-control" type="text" th:field="${user.surname}" />
 			</div>
 			
 			<div class="form-group">
 				<label for="user.address.city">Město: </label> <input type="text"
 					class="form-control" 
-					th:field="*{user.address.city}" />
+					th:field="${user.address.city}" />
 			</div>
 			<div class="form-group">
 				<label for="user.address.district">Kraj: </label> <input type="text"
 					class="form-control"
-					th:field="*{user.address.district}" />
+					th:field="${user.address.district}" />
 			</div>
 
 			<div class="form-group">
 				<label for="user.address.street">Ulice: </label> <input type="text"
 					class="form-control"
-					th:field="*{user.address.street}" />
+					th:field="${user.address.street}" />
 			</div>
 
 			<div class="form-group">
 				<label for="user.address.streetNumber">Číslo popisné: </label> <input type="text"
 					class="form-control"
-					th:field="*{user.address.streetNumber}" />
+					th:field="${user.address.streetNumber}" />
 			</div>
 
 			<div class="form-group">
 				<label for="user.address.zipCode">PSČ: </label> <input type="text"
 					class="form-control"
-					th:field="*{user.address.zipCode}" />
+					th:field="${user.address.zipCode}" />
 			</div>
 
-			<div class="form-group  dropzone">
+			<div class="form-group">
 				<label for="image">Fotka:</label> <input type="file"
-					th:field="*{image}" />
+					th:field="${user.image}" id="image"/>
 			</div>
-
-
-
-
-			<div class="checkbox">
-			  	<label th:for="${#ids.next('user.role.description')}">
-  				<input type="checkbox" th:field="*{user.role.description}" />Hotelier:</label>
-			</div>
-			<button th:if="${userUpload.hotel.name}" type="submit">Edit</button>
-			<button th:unless="${userUpload.hotel.name}" type="submit" name="add">Registrovat</button>
+			
+			
+			
+			<select class="form-control" th:field="${user.role.roleId}">
+				<option th:each="r : ${roles}" th:value="${r.roleId}"  th:text="${r.description}"
+					 >Types</option>
+			</select>
+			
+			<button th:if="${user.login}" type="submit">Edit</button>
+			<button th:unless="${user.login}" type="submit">Registrovat</button>
+			<input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
 		</form>    
 
 
