--- a/src/main/webapp/WEB-INF/views/hotelAddEdit.html
+++ b/src/main/webapp/WEB-INF/views/hotelAddEdit.html
@@ -5,12 +5,17 @@
 </head>
 
 <body>
-
+	
 	<nav th:replace="/layout/header :: navbar"></nav>
 
 	<div class="container">
-		<form action="#" th:action="@{/updateHotel/}" name="hotel"
+	
+		<form action="#" th:action="@{/updateHotel/}"
 			th:object="${hotelUpload}" method="post" enctype="multipart/form-data">
+			
+			<h2 th:if="*{hotel.name}">Editace hotelu: <span th:text="*{hotel.name}"></span>Přidání nového hotelu</h2>
+	<h2 th:unless="*{hotel.name}">Přidání nového hotelu</h2>
+			
 			<div class="form-group">
 				<input type="hidden" th:field="*{hotel.hotelId}" /> 
 				<label for="hotel.name">Název:</label>
@@ -100,6 +105,8 @@
   				<input type="checkbox" th:field="*{hotel.equipment.wheellchairAccess}" />Bezbarierový přístup</label>
 			
 			</div>
+			<input type="hidden" name="${_csrf.parameterName}"
+				value="${_csrf.token}" />
 
 			<button id="send" th:if="${hotelUpload.hotel.name}" type="submit">Edit</button>
 			<button id="send" th:unless="${hotelUpload.hotel.name}" type="submit" name="add">Přidat hotel</button>
@@ -140,7 +147,7 @@
 	
 			
 	Dropzone.options.dropanbula = {
-			url: "updateHotelsImages/",
+			url: "updateHotelsImages",
 	        paramName: 'file', // The name that will be used to
 	        maxFilesize: 15000000000, // M
 	        uploadMultiple: true,
@@ -150,6 +157,7 @@
 	        addRemoveLinks: true,
 	        createImageThumbnails: true,
 	        clickable: true,
+	        headers: { "My-Header": [[${hotelUpload.hotel.hotelId}]] }, 
 	        acceptedFiles: "image/*",
 	        
 	        	init: function() {
@@ -158,37 +166,24 @@
 	        	    // First change the button to actually tell Dropzone to process the queue.
 	        	    	window.document.getElementById("send").addEventListener("click", function(e) {
 	        	      // Make sure that the form isn't actually being sent.
-	        	      
-//	        	                  myDropzone.on("sendingmultiple", function(file, xhr, formData) {
-//                formData.append("id", [[${hotelUpload.hotel.hotelId}]]);    
-//            });
-	        	      
 	        	      e.preventDefault();
-	        	      //e.stopPropagation();
+	        	      e.stopPropagation();
 	        	      myDropzone.processQueue();
-	        	      //document.hotel.submit();
+	        	      document.hotel.submit();
 	        	    });
 	        	    
 	        	 // Listen to the sendingmultiple event. In this case, it's the sendingmultiple event instead
 	        	    // of the sending event because uploadMultiple is set to true.
-	        	    this.on("sendingmultiple", function(file, xhr, formData) {
-	        	    	formData.append("id", [[${hotelUpload.hotel.hotelId}]]);
+	        	    this.on("sendingmultiple", function() {
 	        	      // Gets triggered when the form is actually being sent.
 	        	      // Hide the success button or the complete form.
 	        	    });
-	        	    this.on("sending", function(file, xhr, formData) {
-	        	    	//formData.append("id", [[${hotelUpload.hotel.hotelId}]]); 
-		        	      // Gets triggered when the form is actually being sent.
-		        	      // Hide the success button or the complete form.
-		        	    });
 	        	    this.on("successmultiple", function(files, response) {
-	        	    	document.hotel.submit();
-	        	    	// Gets triggered when the files have successfully been sent.
+	        	      // Gets triggered when the files have successfully been sent.
 	        	      // Redirect user or notify of success.
 	        	    });
 	        	    this.on("errormultiple", function(files, response) {
-	        	    	document.hotel.submit();
-	        	    	// Gets triggered when there was an error sending the files.
+	        	      // Gets triggered when there was an error sending the files.
 	        	      // Maybe show form again, and notify user of error
 	        	    });
 	        	  }
