--- a/src/main/webapp/WEB-INF/views/layout/header.html
+++ b/src/main/webapp/WEB-INF/views/layout/header.html
@@ -21,6 +21,9 @@
           href="../../resources/css/basic.min.css" th:href="@{/resources/css/basic.min.css}" />  
     <link rel="stylesheet" type="text/css" media="all" 
           href="../../resources/css/dropzone.min.css" th:href="@{/resources/css/dropzone.min.css}" />           
+          
+          <link rel="stylesheet" type="text/css" media="all" 
+          href="../../reources/css/loginModal.css" th:href="@{/resources/css/loginModal.css}" />                  
     
   </head>		
 
