--- a/src/main/webapp/WEB-INF/views/registration.html
+++ b/src/main/webapp/WEB-INF/views/registration.html
@@ -12,7 +12,7 @@
     <div class="container">
 	<h2>Registrace</h2>
     <form action="#" th:action="@{/updateUser/}"
-			th:object="${user}" method="post" enctype="multipart/form-data">
+			th:object="${user}" method="post">
 			<div class="form-group">
 				<input type="hidden" th:field="${user.userId}" />
 				
